--- a/postgres/Dockerfile.dev
+++ b/postgres/Dockerfile.dev
@@ -1,4 +1,5 @@
 FROM library/postgres
+COPY init.sql /docker-entrypoint-initdb.d/
 ENV POSTGRES_USER postgres
 ENV POSTGRES_PASSWORD postgres_password
 ENV POSTGRES_DB inventory
