--- a/api/package.json
+++ b/api/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "amazon-product-api": "^0.4.4",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^3.0.3",
     "body-parser": "*",
     "bookshelf": "^0.14.2",
     "bookshelf-bcrypt": "^3.0.2",
