--- a/client/Dockerfile.dev
+++ b/client/Dockerfile.dev
@@ -1,6 +1,8 @@
 FROM node:alpine
 WORKDIR '/app'
 COPY ./package.json ./
-RUN npm install
+COPY ./package-lock.json ./
+RUN npm install -g -s --no-progress yarn && \
+    yarn
 COPY . .
 CMD ["npm", "run", "start"]
