--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "amazon-autocomplete": "^1.0.1",
+    "amazon-product-api": "^0.4.4",
     "axios": "^0.18.0",
+    "bootstrap": "^4.2.1",
+    "fixed-data-table-2": "^0.8.16",
     "react": "^16.7.0",
+    "react-bootstrap": "^0.32.4",
+    "react-bootstrap-table": "^4.3.1",
     "react-dom": "^16.7.0",
+    "react-headroom": "^2.2.4",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2",
