--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,7 @@
     "bookshelf-bcrypt": "^3.0.2",
     "bookshelf-cascade-delete": "^2.0.1",
     "cors": "2.8.4",
+    "crypto": "^1.0.1",
     "express": "4.16.3",
     "knex": "^0.16.3",
     "nodemon": "1.18.3",
