--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.7.0",
     "react-headroom": "^2.2.4",
     "react-redux": "^5.0.7",
+    "react-redux-grid": "^5.6.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2",
     "redux": "^4.0.0",
