--- a/api/package.json
+++ b/api/package.json
@@ -1,13 +1,14 @@
 {
   "dependencies": {
     "amazon-product-api": "^0.4.4",
+    "await-to-js": "^2.1.1",
     "bcrypt": "^3.0.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "*",
     "bookshelf": "^0.14.2",
     "bookshelf-bcrypt": "^3.0.2",
     "bookshelf-cascade-delete": "^2.0.1",
     "cors": "2.8.4",
-    "crypto": "^1.0.1",
     "express": "4.16.3",
     "knex": "^0.16.3",
     "nodemon": "1.18.3",
