--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-headroom": "^2.2.4",
     "react-redux": "^5.0.7",
     "react-redux-grid": "^5.6.1",
+    "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2",
     "redux": "^4.0.0",
