updated Readme and api dockerfile for running migrations

--- a/api/Dockerfile.dev
+++ b/api/Dockerfile.dev
@@ -8,4 +8,5 @@ COPY ./package.json ./
 COPY ./yarn.lock ./
 RUN npm install -g -s --no-progress yarn && yarn
 COPY . .
+CMD ["knex", "migrate:latest"]
 CMD ["npm", "run", "dev"]
