--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,9 @@
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "axios": "^0.18.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "moxios": "^0.4.0",
     "bootstrap": "^4.2.1",
     "fixed-data-table-2": "^0.8.16",
     "react": "^16.7.0",
