--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,11 @@
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "axios": "^0.18.0",
+    "bootstrap": "^4.2.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "moxios": "^0.4.0",
-    "bootstrap": "^4.2.1",
     "fixed-data-table-2": "^0.8.16",
+    "moxios": "^0.4.0",
     "react": "^16.7.0",
     "react-bootstrap": "^0.32.4",
     "react-bootstrap-table": "^4.3.1",
@@ -24,6 +24,7 @@
     "react-scripts": "2.1.2",
     "redux": "^4.0.0",
     "redux-form": "^7.4.2",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
